--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   "dependencies": {
     "@ipld/car": "^5.4.0",
     "@pinata/sdk": "^2.1.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "form-data": "^4.0.2",
     "kubo-rpc-client": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "multiformats": "^13.3.2",
     "nft.storage": "^7.2.0",
     "node-fetch": "^3.3.2"
