--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Web3.Storage API Token (Get from https://web3.storage)
-WEB3_STORAGE_TOKEN=your_token_here
+# Example .env file for blockchain project
+# Fill in your own values and rename to .env
 
-# Polygon Mumbai RPC URL (Get from https://alchemy.com)
-MUMBAI_RPC_URL=your_mumbai_rpc_url
+# Metamask private key (for deploying/interacting with contracts)
+PRIVATE_KEY=your_metamask_private_key_here
 
-# Your wallet private key (Get from MetaMask)
-PRIVATE_KEY=your_private_key_here
+# Pinata API credentials (for uploading to IPFS)
+PINATA_API_KEY=your_pinata_api_key_here
+PINATA_API_SECRET=your_pinata_api_secret_here
 
-# Etherscan API 密鑰（用於合約驗證）
-ETHERSCAN_API_KEY=your_etherscan_api_key_here 
+# Cardona zkEVM RPC URL (testnet or mainnet)
+CARDONA_RPC_URL=https://rpc.cardona.zkevm-rpc.com
